--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -11,3 +11,9 @@ Error.signup.name.length=The name must have between 5 and 24 characters.
 Error.signup.lastName.length=The last name must have between 5 and 24 characters.
 Error.signup.password.length = The password must have between 5 and 24 characters.
 Error.signup.passwordConfirm.coincidence=These passwords don't match.
+Error.mark.add.description=The description must have 20 characters
+Error.mark.add.score=The score must have between 1 and 10
+Error.teacher.name.length=The name must have between 5 and 24 characters.
+Error.teacher.surname.length=The last name must have between 5 and 24 characters.
+Error.teacher.category.length=The category must have between 5 and 24 characters.
+Error.teacher.add.dni=The DNI must have 9 characters and the last must be a letter
