--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -1,7 +1,7 @@
 welcome.message=Bienvenidos a la página principal
 language.change=Idioma
 language.en=Inglés
-language.es=Español
+language.es=Españpl
 login.message=Identifícate
 signup.message=Regístrate
 Error.empty= Este campo no puede ser vacío
@@ -11,3 +11,9 @@ Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres.
 Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres.
 Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
 Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.
+Error.mark.add.description=La descripcion tiene que tener 20 caracteres
+Error.mark.add.score=La puntuacion debe tener entre 0 y 10
+Error.teacher.name.length=El nombre debe tener entre 5 y 24 caracteres.
+Error.teacher.surname.length=El apellido debe tener entre 5 y 24 caracteres.
+Error.teacher.category.length=La categoria debe tener entre 5 y 24 caracteres.
+Error.teacher.add.dni=El dni del usuario debe tener 9 caracteres y teminar por una letra
