--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,9 @@
 welcome.message=Bienvenidos a la página principal
 language.change=Idioma
 language.en=Inglés
-language.es=Españpl
+language.es=Español
 login.message=Identifícate
-signup.message=Regístrate
+signup.message=Registrate
 Error.empty= Este campo no puede ser vacío
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
 Error.signup.dni.duplicate=Este DNI ya existe.
