--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -3,7 +3,7 @@ language.change=Idioma
 language.en=Inglés
 language.es=Español
 login.message=Identifícate
-signup.message=Registrate
+signup.message=Regístrate
 Error.empty= Este campo no puede ser vacío
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
 Error.signup.dni.duplicate=Este DNI ya existe.
